--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cfenv": "^1.0.4",
     "express": "^4.15.3",
     "github-api": "^3.0.0",
+    "js-yaml": "^3.10.0",
     "moment": "^2.18.1",
     "node-cron": "^1.2.0",
     "pug": "^2.0.0-rc.2",
+    "request": "^2.83.0",
     "serve-favicon": "^2.4.3",
     "slack-node": "^0.1.8"
   }
