--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "Matthew McNeeney <mmcneeney@pivotal.io>",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.5.0",
-    "cfenv": "^1.0.4",
-    "express": "^4.15.3",
+    "async": "^2.6.2",
+    "cfenv": "^1.1.0",
+    "express": "^4.16.4",
     "github-api": "^3.0.0",
     "js-yaml": "^3.10.0",
-    "moment": "^2.18.1",
-    "node-cron": "^1.2.0",
-    "pug": "^2.0.0-rc.2",
+    "moment": "^2.24.0",
+    "node-cron": "^1.2.1",
+    "pug": "^2.0.3",
     "request": "^2.83.0",
-    "serve-favicon": "^2.4.3",
+    "serve-favicon": "^2.5.0",
     "slack-node": "^0.1.8"
   }
 }
