--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,6 +1,7 @@
 applications:
 - name: release-tracker
-  buildpack: https://github.com/cloudfoundry/nodejs-buildpack
+  buildpacks:
+  - https://github.com/cloudfoundry/nodejs-buildpack
   instances: 1
   memory: 512M
   disk_quota: 512M
