--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "Matthew McNeeney <mmcneeney@pivotal.io>",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.6.2",
-    "cfenv": "^1.1.0",
-    "express": "^4.16.4",
-    "github-api": "^3.0.0",
-    "js-yaml": "^3.10.0",
+    "async": "^2.6.3",
+    "cfenv": "^1.2.2",
+    "express": "^4.17.1",
+    "github-api": "^3.3.0",
+    "js-yaml": "^3.13.1",
+    "lodash": ">=4.17.13",
     "moment": "^2.24.0",
     "node-cron": "^1.2.1",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "request": "^2.83.0",
     "serve-favicon": "^2.5.0",
     "slack-node": "^0.1.8"
